# loopback

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt  start.sh
agent/: agent.py  prompts.py
data/: first-week.csv  sample_feedback.csv
docs/: DEMO_SCRIPT.md  DEVPOST.md  ROADMAP.md  RUN_LOCAL.md  VIDEO_SCRIPT.md
scripts/: auth_spike.py  build_demo_csv.py  capture_screenshots.py  cleanup_demo_project.py  demo_run.py  make_dataset.py  oauth_spike.py  oauth_tools.py  rehearse.py  reset_demo.py  seed_demo.py  verify_wrapper.py
server/: deploy.py  main.py
tests/: test_auth_spike.py  test_gitlab_mcp.py  test_pipeline.py
tools/: approval.py  classify.py  clustering.py  drafting.py  gitlab_mcp.py  gitlab_oauth.py  ingest.py  learning.py  llm.py  redact.py
web/: README.md  next.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts
web/public/: post-incident.csv  sample_feedback.csv  weekly-batch.csv
