[project]
name = "loopback"
version = "0.1.0"
description = "Voice-of-Customer to GitLab agent — Rapid Agent Hackathon (GitLab track)"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform[agent_engines,adk]>=1.112",
    "google-adk>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
